Try to fix visual bug on mobile: SFU sign too huge

--- a/main.css
+++ b/main.css
@@ -130,6 +130,7 @@ header > h1 {
 #building::before {
   background: var(--red);
   content: 'SFU';
+  font-size: 1rem;
   color: white;
   position: relative;
   top: -6px;
